@@ -1,3 +1,7 @@
+2012-09-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* twitter/output.py, twitter/tweetentry.py: Code refactoring.
+
 2012-08-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 1.6.2 release.
